--- a/src/containers/home-page/home-page.css
+++ b/src/containers/home-page/home-page.css
@@ -9,6 +9,8 @@
     color: white;
 }
 
+/* Input styles */
+
 .link-input {
     font-size: 45px;
     text-align: center;
@@ -19,7 +21,47 @@
     border-bottom: 3px solid white;
 }
 
-.link-input:focus{
+.link-input:focus {
     outline: none;
     color: white;
+}
+
+/* button styles */
+
+.btn {
+    box-sizing: border-box;
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 0.6em;
+    color: white;
+    cursor: pointer;
+    display: flex;
+    align-self: center;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.btn:hover {
+    color: black;
+    outline: 0;
+}
+
+.btn:focus {
+    color: black;
+    outline: 0;
+}
+
+.action {
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.action:hover {
+    box-shadow: 0 0 40px 40px white inset;
 }
