--- a/src/containers/home-page/home-page.css
+++ b/src/containers/home-page/home-page.css
@@ -14,10 +14,13 @@
 .link-input {
     font-size: 45px;
     text-align: center;
-    width: 40vw;
-    min-width: 400px;
+    width: 50vw;
+    min-width: 380px;
+    margin-left: 20px;
+    margin-right: 20px;
     border: none;
     background: black;
+    color: white;
     border-bottom: 3px solid white;
 }
 
@@ -27,18 +30,8 @@
 }
 
 /* button styles */
-
-.btn {
-    box-sizing: border-box;
-    appearance: none;
-    background-color: transparent;
-    border: 2px solid white;
-    border-radius: 0.6em;
-    color: white;
-    cursor: pointer;
-    display: flex;
-    align-self: center;
-    font-size: 1.5rem;
+.action {
+    font-size: 1.2rem;
     line-height: 1;
     margin: 20px;
     padding: 1.2em 2.8em;
@@ -46,22 +39,33 @@
     text-align: center;
     text-transform: uppercase;
     font-weight: 800;
-}
-
-.btn:hover {
-    color: black;
-    outline: 0;
-}
-
-.btn:focus {
-    color: black;
-    outline: 0;
-}
-
-.action {
+    color: white !important;
     transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
 }
 
 .action:hover {
+    color: black !important;
     box-shadow: 0 0 40px 40px white inset;
+}
+
+.incorrect {
+    font-size: 1.2rem;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: white !important;    
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.incorrect:hover {
+    box-shadow: 0 0 40px 40px red inset !important;
+    color: white !important;
+}
+
+.not-visible {
+    visibility: hidden;
 }
