--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 .main-wrapper {
-    margin-left: 20px;
-    margin-right: 20px;
+    /* margin-left: 20px; */
+    /* margin-right: 20px; */
     height:  95vh;
 }
