--- a/src/containers/home-page/home-page.css
+++ b/src/containers/home-page/home-page.css
@@ -7,10 +7,10 @@
     flex-flow: column;
     box-sizing: border-box;
     color: white;
-    transform: scale(1); /* you need a scale here to allow it to transition in both directions */
+    transform: scale(1);
+    /* you need a scale here to allow it to transition in both directions */
     transition: 0s.15s all ease;
 }
-
 
 /* Input styles */
 
@@ -90,7 +90,7 @@
     align-items: center;
 }
 
-#top > h4 {
+#top>h4 {
     margin: 0px;
     overflow: hidden;
 }
@@ -111,4 +111,79 @@
 
 #bottom:hover {
     cursor: pointer;
+}
+
+/* toogler styles */
+
+.b {
+    display: block;
+}
+
+.toggle {
+    display: flex;
+    flex-flow: column;
+    position: absolute;
+    width: 200px;
+    height: 60px;
+    border-radius: 50px;
+    background-color: black;
+    overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, .05);
+    border: 5px solid white;
+}
+
+.check {
+    position: absolute;
+    display: block;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 6;
+}
+
+.check:checked~.track {
+    background-color: white;
+}
+
+.check:checked~.switch {
+    right: 2px;
+    left: 140px;
+    background-color: black;
+    transition-duration: .6s, .2s;
+}
+
+.switch {
+    position: absolute;
+    left: 2px;
+    top: 2px;
+    bottom: 2px;
+    right: 140px;
+    background-color: #fff;
+    border-radius: 36px;
+    z-index: 1;
+    transition-duration: .2s, .6s;
+    transition-property: left, right;
+    transition-easing-funciton: cubic-bezier(.2, .1, 0, 1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+}
+
+.toggle:active .switch {
+    left: 2px;
+    right: 2px;
+}
+
+.track {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    transition: .4s ease;
+    border-radius: inherit;
+    box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, .05);
 }
