--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,8 @@
 .main-wrapper {
-    /* margin-left: 20px; */
-    /* margin-right: 20px; */
-    height:  100vh;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
