--- a/src/containers/home-page/home-page.css
+++ b/src/containers/home-page/home-page.css
@@ -1,7 +1,11 @@
 .home-page {
     display: flex;
     width: 100%;
-    height: 100%;
+    max-width: 800px;
+    min-width: 320px;
+    margin-left: 20px;
+    margin-right: 20px;
+    height: auto;
     align-items: center;
     justify-content: center;
     flex-flow: column;
@@ -17,10 +21,7 @@
 .link-input {
     font-size: 45px;
     text-align: center;
-    width: 50vw;
-    min-width: 380px;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 100%;
     margin-bottom: 20px;
     border: none;
     background: black;
@@ -31,14 +32,6 @@
 @media (max-width: 720px) {
     .link-input {
         font-size: 35px;
-        text-align: center;
-        width: 80vw;
-        margin-left: 20px;
-        margin-right: 20px;
-        border: none;
-        background: black;
-        color: white;
-        border-bottom: 3px solid white;
     }
 }
 
@@ -130,18 +123,31 @@
 
 /* checkboxes styles */
 
+.actions-container {
+    display: flex;
+    width: 100%;
+}
+
+@media (max-width: 720px) {
+    .actions-container {
+        display: flex;
+        width: 100%;
+        flex-flow: column;
+    }
+    .once-available-label {
+        margin-left: -25px;
+    }
+}
+
 .container {
-    /* border: 1px solid red; */
-    width: 50vw;
-    min-width: 380px; 
+    width: 100%;
+    min-width: 320px;
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
-    justify-content: start;
-    align-items: start;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    width: auto;
-    height: auto;
 }
 
 .container span {
@@ -177,4 +183,60 @@
     font-size: 30px;
     color: #ecf0f1;
     content: "✔";
+}
+
+/*modal styles*/
+
+.modal-window {
+    position: fixed;
+    /* background-color: rgba(255, 255, 255, 0.15); */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    opacity: 1;
+    pointer-events: none;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+/* .modal-window:target {
+    opacity: 1;
+    pointer-events: auto;
+} */
+
+.modal-window>div {
+    width: 400px;
+    position: relative;
+    margin: 10% auto;
+    padding: 2rem;
+    background: #fff;
+    color: #444;
+}
+
+.modal-window header {
+    font-weight: bold;
+}
+
+.modal-close {
+    color: #aaa;
+    line-height: 50px;
+    font-size: 80%;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    width: 70px;
+    text-decoration: none;
+}
+
+.modal-close:hover {
+    color: #000;
+}
+
+.modal-window h1 {
+    font-size: 150%;
+    margin: 0 0 15px;
 }
