--- a/src/containers/home-page/home-page.css
+++ b/src/containers/home-page/home-page.css
@@ -185,58 +185,66 @@
     content: "✔";
 }
 
-/*modal styles*/
 
-.modal-window {
+/*modal window styles*/
+
+.overlay {
     position: fixed;
-    /* background-color: rgba(255, 255, 255, 0.15); */
     top: 0;
-    right: 0;
     bottom: 0;
     left: 0;
-    z-index: 999;
-    opacity: 1;
-    pointer-events: none;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-}
-
-/* .modal-window:target {
-    opacity: 1;
-    pointer-events: auto;
-} */
-
-.modal-window>div {
-    width: 400px;
-    position: relative;
-    margin: 10% auto;
-    padding: 2rem;
-    background: #fff;
-    color: #444;
-}
-
-.modal-window header {
-    font-weight: bold;
-}
-
-.modal-close {
-    color: #aaa;
-    line-height: 50px;
-    font-size: 80%;
-    position: absolute;
     right: 0;
-    text-align: center;
-    top: 0;
-    width: 70px;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .popup {
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 60%;
+    position: relative;
+    transition: all 5s ease-in-out;
+  }
+  
+
+  .popup .close {
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
     text-decoration: none;
-}
+    color: #333;
+    position: absolute;
+    top: 0;
+    margin: 5px;
+    right: 0;
+  }
 
-.modal-close:hover {
-    color: #000;
-}
+  .close:hover {
+      cursor: pointer;
+  }
 
-.modal-window h1 {
-    font-size: 150%;
-    margin: 0 0 15px;
+  .result-link-popup {
+      margin-top: 25px;
+      font-size: 18px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      color: #333;
 }
+  
+  .popup .content {
+    max-height: 30%;
+    overflow: auto;
+  }
+  
+  @media screen and (max-width: 700px){
+    .box{
+      width: 85%;
+    }
+    .popup{
+      width: 85%;
+    }
+  }
